Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22867

QSizeGrip crashes when reparented

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0
    • 4.7.2, 5.4.0 Alpha
    • None
    • Windows XP SP3
      MSVC 2003

      qt-everywhere-opensource-src-4.7.2.zip
      Source revision: 0828c69ad805406568f6eef2bffbbd54b04dea41
      Mkdist revision: 74a394eb70d29b9f9db6d12c1000c80e2f3db530
    • b2b9fdfda0f7838059d7e826d81740977ef35a6e

      QSizeGrip holds pointer to its window (top level widget) - QSizeGripPrivate::tlw. This pointer isn't updated immediately after its top level widget changes, but some time later. The previous TLW is accesed during the update (event filter removing), but it may not exist at this time => crash.

      In the attachment, there is an example code which crashes because of this bug.

        1. main.cpp
          0.6 kB
          Martin Dědek
        For Gerrit Dashboard: QTBUG-22867
        # Subject Branch Project Status CR V

            peppe Giuseppe D'Angelo
            mdedek_lynguent Martin Dědek
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes