QSizeGrip: use a QPointer to the tracked TLW

And not a normal pointer. The problem is that in certain scenarios,
if the TLW containing a QSizeGrip changes and the old TLW gets
immediately destroyed, then the mechanism which updates the tracked
TLW is run too late, and ends up accessing a dangling pointer.
Therefore, we need to protect that pointer via a smart pointer.

Task-number: QTBUG-22867
Change-Id: Icfb051132bacde604f660ac7a98bc0a9d1022c68
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>

cregit: b2b9fdfda0f7838059d7e826d81740977ef35a6e https://github.com/qt/qtbase/commit/b2b9fdfda0f7838059d7e826d81740977ef35a6e